# pastepin

./: .gitignore  Cargo.toml  Procfile  README.md  app.json  build.rs
frontend/: browse.html  browse.js  browse_imgs.html  browse_imgs.js  clipboard.js  img.html  index.html  snackbar.css  upload.html  upload.js  upload_img.js
migrations/2019-02-19-155200_create_pastes/: down.sql  up.sql
src/: imagepin.rs  main.rs  models.rs  pagination.rs  pastepin.rs  schema.rs  utils.rs
src/frontend/: frontend_files.array  mod.rs  retrieve_paste.tmpl
